# src/main/kotlin/br/com/fiap/mba/mspedido/resources/impl/PedidoResourcesImpl.kt
@@ -1,28 +1,51 @@
 package br.com.fiap.mba.mspedido.resources.impl
 
+import br.com.fiap.mba.mspedido.converters.PedidoConverter
+import br.com.fiap.mba.mspedido.services.PedidoService
 import org.openapi.cambio.server.api.V1Api
 import org.openapi.cambio.server.model.Pedido
+import org.openapi.cambio.server.model.PedidoId
 import org.openapi.cambio.server.model.PedidoPostRequest
+import org.springframework.http.HttpStatus
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.RestController
 import org.springframework.web.server.ServerWebExchange
 import reactor.core.publisher.Mono
-import java.util.UUID
 
 @RestController
-class PedidoResourcesImpl : V1Api {
+class PedidoResourcesImpl(
+    private val conversor: PedidoConverter,
+    private val service: PedidoService
+) : V1Api {
 
     override fun criarPedido(
         pedidoPostRequest: Mono<PedidoPostRequest>?,
         exchange: ServerWebExchange?
-    ): Mono<ResponseEntity<Pedido>> {
-        return super.criarPedido(pedidoPostRequest, exchange)
+    ): Mono<ResponseEntity<PedidoId>>? {
+
+        return pedidoPostRequest
+            ?.map {
+                this.conversor.from(it)
+            }?.map {
+                this.service.criar(it)
+            }?.flatMap {
+                it
+            }?.map {
+
+                val response = PedidoId()
+                response.id = it
+
+                ResponseEntity(response, HttpStatus.CREATED)
+            }
     }
 
     override fun recuperarPedido(
-        id: UUID?,
+        id: String?,
         exchange: ServerWebExchange?
     ): Mono<ResponseEntity<Pedido>> {
-        return super.recuperarPedido(id, exchange)
+
+        return this.service.recuperar(id)
+            .map { this.conversor.from(it) }
+            .map { ResponseEntity(it, HttpStatus.OK) }
     }
 }
